apps/tracker/tracker-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: bt-tracker
  namespace: balhau-dev
  labels:
    version: 0.0.6
    app: bt-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bt-tracker
  template:
    metadata:
      labels:
        app: bt-tracker
    spec:
      containers:
      - name: bt-tracker
        image: 10.108.252.69:5000/balhau/bt-tracker:arm32v7-0.0.6
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
            
        ports:
        - containerPort: 8000
          name: registry
          protocol: TCP
